--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
+    "deploy": "bun run build && wrangler deploy",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "typegen": "wrangler types",
+    "preview": "bun run build && wrangler dev",
+    "cf-typegen": "wrangler types"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "@remix-run/cloudflare": "^2.14.0",
     "@remix-run/node": "^2.14.0",
     "@remix-run/react": "^2.14.0",
     "@remix-run/serve": "^2.14.0",
@@ -20,6 +25,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241112.0",
     "@remix-run/dev": "^2.14.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -36,7 +42,8 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "^3.90.0"
   },
   "engines": {
     "node": ">=20.0.0"
